[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.1"
hdk = "=0.1.1"
serde = "1"

[workspace.dependencies.form]
path = "dnas/form_test/zomes/coordinator/form"

[workspace.dependencies.form_integrity]
path = "dnas/form_test/zomes/integrity/form"

[workspace.dependencies.profiles]
path = "dnas/form_test/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/form_test/zomes/integrity/profiles"
